TaskChooser, Tasks-subpage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grimm online</title>
+    <title>Grimm online - Task chooser</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <main>
+        <nav>
+            <a href="index.html"><img class="logo" src="images/Grimm-logo.svg"></a>
+            <h1 class="menu-title">Tiéd a szó-tár</h1>
+            <ul class="nav-menu">
+                <li><a href="#">Profilom</a></li>
+                <li class="active"><a href="#">Versenyfeladatok</a></li>
+                <li><a href="#">Versenyszabályzat</a></li>
+                <li><a href="#">Vásárlás</a></li>
+            </ul>
+        </nav>
+
+        <section class="content-area">
+            <div class="grid-outer">
+                <div class="grid">
+                    <div class="card">
+                        <p class="card-title">1. Magyar ábécé</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li class="task-done">1</li>
+                                <li class="task-inprogress">2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">2. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">3. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">4. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">5. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">6. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">7. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">8. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">9. Title</p>
+                        <div class="card-results">
+                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <ul class="card-tasks">
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
