--- a/index.html
+++ b/index.html
@@ -27,20 +27,38 @@
         <section class="content-area">
             <div class="grid-outer">
                 <div class="grid">
-                    <div class="card">
-                        <p class="card-title">1. Magyar ábécé</p>
-                        <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                    <a href="tabs.html" class="temp-link">
 
-                            <ul class="card-tasks">
-                                <li class="task-done">1</li>
-                                <li class="task-inprogress">2</li>
-                                <li>3</li>
-                                <li>4</li>
-                            </ul>
+                        <div class="card">
+                            <div class="time-overlay" style="display: none;">
+                                <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                    <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                    <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                    <div class="svg-abs-center svg-progress-label">3:06</div>
+                                </svg>                                
+                            </div>
+                            <p class="card-title">1. Magyar ábécé</p>
+                            <div class="card-results">
+                                <div class="card-time"><img class="icon" src="/images/Icons/TaskDone.svg"><p>0:00</p></div>
+
+                                <ul class="card-tasks">
+                                    <li class="task-done">1</li>
+                                    <li class="task-done">2</li>
+                                    <li class="task-inprogress">3</li>
+                                    <li>4</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">2. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -54,6 +72,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">3. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -67,6 +92,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">4. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -80,6 +112,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">5. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -93,6 +132,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">6. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -106,6 +152,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="display: none;">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">7. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -119,6 +172,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">8. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
@@ -132,6 +192,13 @@
                         </div>
                     </div>
                     <div class="card">
+                        <div class="time-overlay" style="">
+                            <svg viewbox="0 0 80 80" class="svg-abs-center svg-rad-progress">
+                                <circle class="svg-progress-background" cx="40" cy="40" r="35" />
+                                <circle class="svg-progress-bar" cx="40" cy="40" r="35" />
+                                <div class="svg-abs-center svg-progress-label">3:06</div>
+                            </svg>
+                        </div>
                         <p class="card-title">9. Title</p>
                         <div class="card-results">
                             <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
