media-queries fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <nav>
             <a href="index.html"><img class="logo" src="images/Grimm-logo.svg"></a>
-            <h1 class="menu-title">Tiéd a szó-tár</h1>
+            <h1 class="menu-title">Tiéd&nbsp;a szó&#8209;tár</h1>
             <ul class="nav-menu">
                 <li><a href="#">Profilom</a></li>
                 <li class="active"><a href="#">Versenyfeladatok</a></li>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
 
-        <section class="content-area">
+        <section class="content-area lr-gap">
             <div class="grid-outer">
                 <div class="grid">
                     <a href="tabs.html" class="temp-link">
@@ -39,7 +39,7 @@
                             </div>
                             <p class="card-title">1. Magyar ábécé</p>
                             <div class="card-results">
-                                <div class="card-time"><img class="icon" src="/images/Icons/TaskDone.svg"><p>0:00</p></div>
+                                <div class="card-time"><img class="icon" src="./images/Icons/TaskDone.svg"><p>0:00</p></div>
 
                                 <ul class="card-tasks">
                                     <li class="task-done">1</li>
@@ -61,7 +61,7 @@
                         </div>
                         <p class="card-title">2. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -81,7 +81,7 @@
                         </div>
                         <p class="card-title">3. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -101,7 +101,7 @@
                         </div>
                         <p class="card-title">4. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -121,7 +121,7 @@
                         </div>
                         <p class="card-title">5. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -141,7 +141,7 @@
                         </div>
                         <p class="card-title">6. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -161,7 +161,7 @@
                         </div>
                         <p class="card-title">7. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -181,7 +181,7 @@
                         </div>
                         <p class="card-title">8. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
 
                             <ul class="card-tasks">
                                 <li>1</li>
@@ -201,7 +201,7 @@
                         </div>
                         <p class="card-title">9. Title</p>
                         <div class="card-results">
-                            <div class="card-time"><img class="icon" src="/images/Icons/TaskUnDone.svg"><p>0:00</p></div>
+                            <div class="card-time"><img class="icon" src="./images/Icons/TaskUnDone.svg"><p>0:00</p></div>
                             <ul class="card-tasks">
                                 <li>1</li>
                                 <li>2</li>
