--- a/tabs.html
+++ b/tabs.html
@@ -15,7 +15,7 @@
 
     <main>
         <nav>
-            <a href="index.html"><img class="logo" src="images/Grimm-logo.svg"></a>
+            <a href="index.html"><img class="logo" src="../images/Grimm-logo.svg"></a>
             <h1 class="menu-title">Tiéd a szó-tár</h1>
             <ul class="nav-menu">
                 <li><a href="#">Profilom</a></li>
