--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <nav>
-            <a href="index.html"><img class="logo" src="images/Grimm-logo.svg"></a>
+            <a href="index.html"><img class="logo" src="./images/Grimm-logo.svg"></a>
             <h1 class="menu-title">Tiéd&nbsp;a szó&#8209;tár</h1>
             <ul class="nav-menu">
                 <li><a href="#">Profilom</a></li>
