--- a/tabs.html
+++ b/tabs.html
@@ -15,8 +15,8 @@
 
     <main>
         <nav>
-            <a href="index.html"><img class="logo" src="../images/Grimm-logo.svg"></a>
-            <h1 class="menu-title">Tiéd a szó-tár</h1>
+            <a href="index.html"><img class="logo" src="./images/Grimm-logo.svg"></a>
+            <h1 class="menu-title">Tiéd&nbsp;a szó&#8209;tár</h1>
             <ul class="nav-menu">
                 <li><a href="#">Profilom</a></li>
                 <li class="active"><a href="#">Versenyfeladatok</a></li>
